# Design-Patterns

./: .gitignore
1. SingletonObserver/: Key.cpp  Main.cpp
2. Decorator/: ExclamationMark.cpp  IKey.h  Key.cpp  Key.h  Keyboard.cpp  Main.cpp  QuestionMark.h
3. Strategy/: BicycleStrategy.cpp  BicycleStrategy.h  PublicTransportStrategy.cpp  PublicTransportStrategy.h  Risk.h  Shipping.cpp  Shipping.h  TaxiStrategy.cpp  TaxiStrategy.h  VehicleStrategy.h  main.cpp
3. Strategy/StrategyVehiclesTests/: test.cpp
4. Proxy/: ExclamationMark.h  Key.h  Keyboard.h  Main.cpp  Proxy.sln  ProxyKey.cpp  ProxyKey.h  QuestionMark.cpp
6. Abstract Factory/: AbstractGeneratorFactory.h  CMakeLists.txt  IGenerator.h  Iota.cpp  Iota.h  IotaFactory.h  RandomShuffle.cpp  RandomShuffle.h  RandomShuffleSorted.cpp  RandomShuffleSorted.h  ShuffleFactory.h  ShuffleSortedFactory.h  main.cpp
